// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoansReducer LOAD LOAN DETAIL Success should should return the full loan detail for requested loan number 1`] = `
Object {
  "entities": Object {
    "0000015864": Object {
      "borrower": "JEFFERY BARRON",
      "borrowerPrimaryEmailAddress": "JMPROTEK@MTAONLINE.NET",
      "borrowerPrimaryPhoneNumber": "9078926021",
      "borrowerPrimarySSN": "xxx-xx-6553",
      "borrowerSecondaryPhoneNumber": null,
      "borrowerSecondarySSN": "xxx-xx-7172",
      "coBorrower": "MICHELLE BARRON",
      "loanNumber": "0000015864",
      "propertyAddress1": "11765W BALLYSHANNON",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
    "0000016534": Object {
      "borrower": "MIGUEL RIOS",
      "borrowerPrimaryEmailAddress": null,
      "borrowerPrimaryPhoneNumber": "7132050366",
      "borrowerPrimarySSN": "xxx-xx-2458",
      "borrowerSecondaryPhoneNumber": "7136579592",
      "borrowerSecondarySSN": "",
      "coBorrower": null,
      "loanNumber": "0000016534",
      "propertyAddress1": "11111  CLARK RD",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
  },
  "ids": Array [
    "0000015864",
    "0000016534",
  ],
  "isLoading": false,
  "loaded": true,
  "loanDetail": Object {
    "AM": "Customer Service",
    "AMEmail": null,
    "AMMessage": "Pandemic Assistance: Eligible for 90-day Forbearance Plan.  Bi-Weekly Auto ACH
4/6/16 - Need permission to leave VM",
    "AMPhone": null,
    "AMSupervisor": null,
    "ActiveLM": "N",
    "ActiveREOCode": null,
    "AgreedOrderDefault": null,
    "AgreedOrderDefaultReferred": null,
    "AltLanguage": "& ",
    "AmqLiquidationDate": null,
    "AmqLoanType": "ARM",
    "AnnualTaxes": 1709.4,
    "AppealTask": null,
    "AppealTaskCloseDate": null,
    "AppealTaskStartDate": null,
    "AppealTaskStatus": null,
    "ApprovedListPrice": null,
    "ApprovedListPriceDate": null,
    "AssignedUserId": "+c1",
    "AttorneyOnFile": null,
    "AttorneyOnFileInd": "N",
    "AutoACHDate": "2020-05-01T00:00:00",
    "AutoACHInd": "Y",
    "BKAttorney": null,
    "BKAttorneyEmail": null,
    "BKAttorneyPhoneNumber": null,
    "BKCaseNumber": null,
    "BKCourt": null,
    "BKDischargeDate": null,
    "BKDismissalDate": null,
    "BKFilingDate": null,
    "BKFlag": false,
    "BKIsActiveInd": "N",
    "BKSetupDate": null,
    "BKStatusCode": null,
    "BankruptcyChapterDescr": null,
    "BankruptcyDischargedInd": null,
    "BankruptcyRemovalCode": null,
    "BankruptcyRemovalDate": null,
    "BankruptcySurrender": null,
    "BasisAmount": 34679.9,
    "BorrowerCoSSN": null,
    "BorrowerFICOScore": 694,
    "BorrowerPrimaryEmailAddress": null,
    "BorrowerPrimaryFirstName": "MARIA",
    "BorrowerPrimaryFullName": "MARIA PINA",
    "BorrowerPrimaryLastName": "PINA",
    "BorrowerPrimaryPhoneNumber": "4693345939",
    "BorrowerSSN": "xxx-xx-2905",
    "BorrowerSecondaryFullName": null,
    "BorrowerSecondaryPhoneNumber": "2143392363",
    "BorrowerSecondaryPhoneNumberMSP": "2143392363",
    "BrokerPriceOpinionDate": "2013-02-20T00:00:00",
    "BrokerPriceOpinionValue": 68100,
    "CallUrgency": 100,
    "CallWindowEnd": "2020-04-29T20:45:00",
    "CallWindowStart": "2020-04-29T08:00:00",
    "CampaignDesc": null,
    "CompleteApplicationReceived": null,
    "ConditionalMessage": "RAUL PINA AUTH SPOUSE 12/7/17",
    "ConfirmPropertyListed": null,
    "ConfirmationHearingDate": null,
    "ContactBoardDate": "2013-04-10T00:00:00",
    "ContestedFlag": null,
    "CramdownFlag": null,
    "CurrentInterestRatePct": 9.95,
    "CurrentLegalBalanceAmt": 2383.64,
    "CurrentMonthlyHazardInsAmt": 148.78,
    "CurrentMonthlyMortgageInsAmt": 0,
    "CurrentMonthlyTaxAmt": 142.45,
    "DILDocsExecuted": null,
    "DILDocsToBorrower": null,
    "DILInvestorApproval": null,
    "DILTitleClear": null,
    "DILTitleCurativeInitiated": null,
    "DaysInFC": null,
    "DaysInFCAtFay": null,
    "DaysInFCAtFayNotOnHold": null,
    "DaysinStage": 0,
    "DebtorAttorney": null,
    "DefaultReasonDescr": "NWK - REASON UNKNOWN",
    "DeferredBalance": 0,
    "DelinquencyClassCode": "C1",
    "DelinquencyDays": 0,
    "DemandLetterExpirationDate": null,
    "DemandLetterSentDate": null,
    "EmailAuth": false,
    "EmailId": "",
    "EscAdvanceBalance": 0,
    "EscrowBalance": 1444.13,
    "EscrowProjectedShortageAmt": null,
    "EscrowRestrictedBalance": 0,
    "FCAnswerFiledDate": null,
    "FCAttorney": null,
    "FCAttorneyEmail": null,
    "FCAttorneyPhoneNumber": null,
    "FCBidAmount": null,
    "FCHoldFlag": null,
    "FCHoldProjectedEndDate": null,
    "FCHoldReason": null,
    "FCHoldStartDate": null,
    "FCIsActiveInd": "N",
    "FCJudgementDate": null,
    "FCProcessor": null,
    "FCReferralDate": null,
    "FCRemovalReason": null,
    "FCSaleActualDate": null,
    "FCSaleScheduledDate": null,
    "FCServiceCompletedDate": null,
    "FCStatusCode": null,
    "FCSuccessfulBidAmount": null,
    "FCThirdPartyFlag": null,
    "FCTotalHoldDays": null,
    "FEMAIndicator": null,
    "FICOScoreDate": "2020-03-31T00:00:00",
    "FirstDueDate": "2006-01-01T00:00:00",
    "FirstLegalDate": null,
    "FollowUpDate": null,
    "ForeignAddress": 0,
    "HazardLastPaidAmt": -1785.39,
    "HazardLastPaidDate": "2019-09-26T00:00:00",
    "HazardLastPaidPayeeName": "STATE FARM INS CO",
    "HazardNextDueAmt": 1785.39,
    "HazardNextDueDate": "2020-10-01T00:00:00",
    "HazardPolicyNumber": "58CAL6381",
    "HiType": "1",
    "InRemMFRReferredDate": null,
    "InteriorBPOReceived": null,
    "InteriorBPORequested": null,
    "InvestorHeader": "A30",
    "InvestorLoanNumber": "225065364",
    "InvestorName": "MetLife",
    "InvestorPortfolioName": "MLIC",
    "IsInCallWindow": 1,
    "IsProcessed": 0,
    "IsUSSoldierInd": null,
    "LMLastBAFSentDate": null,
    "LMSetupDate": null,
    "LMStatusCode": null,
    "LastApplicationReceived": null,
    "LastAttemptDate": "2017-12-07T12:52:23",
    "LastContactDate": "2017-12-07T12:52:23",
    "LastDocumentReceived": null,
    "LastDoorKnockDate": null,
    "LastInsurance": null,
    "LastOrigination": null,
    "LastPaymentDate": "2020-04-09T00:00:00",
    "LastSkipTraceDate": null,
    "LateFeeBalance": 0,
    "LatestValuationDate": "2016-03-13T00:00:00",
    "LatestValuationValue": 99500,
    "LegalBalance": 614.47,
    "LienPosition": "1",
    "LiquidationReason": null,
    "LitigationFlag": null,
    "LitigationStatusCode": null,
    "LoType": "3",
    "LoanNumber": "0000018591",
    "LoanType": "ARM",
    "Location": null,
    "LocationOccupancyStatusDescr": "OCCUPIED BY UNKNOWN",
    "LossMitRemovalDate": null,
    "LossMitRemovalReason": null,
    "LossMitigationType": "No Loss Mit",
    "MFRDeniedDate": null,
    "MFRFiledDate": null,
    "MFRFilingDeadline": null,
    "MFRGrantedDate": null,
    "MFRGrantedFlag": "N",
    "MFRHearingDate": null,
    "MFRReferredDate": null,
    "MILastPaidAmt": null,
    "MILastPaidDate": null,
    "MILastPaidPayeeName": null,
    "MINextDueAmt": null,
    "MINextDueDate": null,
    "MailingCity": "DALLAS",
    "MailingState": "TX",
    "MailingStreet": "1103 HANSBORO AVE",
    "MailingZipCode": "75224",
    "MaturityDate": "2020-12-01T00:00:00",
    "ModExplanationLoanOfficer": null,
    "ModExplanationPerformed": null,
    "ModificationDate": null,
    "ModificationFlag": "N",
    "MonthlyInsurance": 148.78,
    "MonthlyPIAmount": 614.47,
    "MostRecentEvalSentDate": null,
    "ND7Flag": false,
    "NSFFeeBalance": 0,
    "NextPaymentDueDate": "2020-05-01T00:00:00",
    "NextPmtDueDate": "2020-05-01T00:00:00",
    "NoContactLetterSentDate": null,
    "NonRecCorpAdvanceBalance": 117.56,
    "NoteDate": "2005-11-07T00:00:00",
    "OTDAmount": null,
    "OTDDate": null,
    "OptionsOffered": null,
    "OriginalBalance": 81600,
    "PITIAmt": 930.97,
    "POCBarDate": null,
    "POCFiledDate": null,
    "PTPAffirm": null,
    "PTPAmount": null,
    "PTPDate": null,
    "PaymentChangeAmt": 930.97,
    "PaymentChangeDate": "2020-05-01T00:00:00",
    "PaymentHistory": "PPPPPPPPPPPP",
    "PaymentHistory36Months": "PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP",
    "PaymentLastAmt": null,
    "PaymentPlanFinalPaymentDate": null,
    "PaymentPlanNextDueDate": null,
    "PaymentPlanNumberOfPayments": null,
    "PaymentPlanPaymentAmt": null,
    "PaymentPlanType": null,
    "PlanConfirmedDate": null,
    "PlanReviewReferred": null,
    "PostPetitionDueDate": null,
    "PriorDefaultReasonDescr": "NWK - Reason Unknown",
    "PriorModDate": null,
    "PriorModFlag": "N",
    "PriorServicerLoanID": "274261114",
    "ProjectedResolutionDate": "2020-12-01T00:00:00",
    "ProjectedResolutionType": "Full Amortization",
    "PropertyCity": "DALLAS",
    "PropertyConditionDescr": null,
    "PropertyInspectionDate": null,
    "PropertyStateCode": "TX",
    "PropertyStreet": "1103  HANSBORO AVE",
    "PropertyZipCode": "75224",
    "ReasonForDefault": "015",
    "ReceivedSaleContract": null,
    "ReceivedTPA": null,
    "RecoverCorpAdvanceBalance": 0,
    "ReferralInsurance": true,
    "ReferralOriginations": null,
    "ResolutionType": "Full Amortization",
    "Segmentation": "",
    "ServiceTransferFlag": null,
    "ShortSaleActualClosingDate": null,
    "ShortSaleApprovalLetterSent": null,
    "ShortSaleContractPrice": null,
    "ShortSaleInvestorApprovalReceived": null,
    "ShortSaleNetProceeds": null,
    "ShortSaleScheduledClosingDate": null,
    "SourceId": 1,
    "StatementReconciliationCompleteDate": null,
    "SuspenseBalanceAmt": 484.69,
    "TOCFiledDate": null,
    "TaxLastPaidAmt": -1709.38,
    "TaxLastPaidDate": "2019-12-05T00:00:00",
    "TaxLastPaidPayeeName": "DALLAS COUNTY",
    "TaxNextDue": null,
    "TaxNextDueAmt": 1709.38,
    "TaxNextDueDate": "2020-12-01T00:00:00",
    "Template": null,
    "Terminated": null,
    "TitleEmployee": null,
    "TopSegmentName": "Current",
    "TopSubsegmentName": "Auto ACH",
    "TotalAmountDue": 0,
    "TotalCorpAdvanceBalance": 117.56,
    "TrusteePayAllFlag": null,
    "UnpaidBalance": 4279.79,
    "VMAppPrimary": false,
    "VMAppSecondary": false,
    "VlmOccupancy": null,
    "VlmOccupancyDate": null,
    "WaterfallStatus": "ACTIVE",
  },
  "loanQuery": null,
  "selectedLoanId": null,
}
`;

exports[`LoansReducer LOANS_LOAD_SUCCESS should add all loans in the payload when none exist 1`] = `
Object {
  "entities": Object {
    "0000015864": Object {
      "borrower": "JEFFERY BARRON",
      "borrowerPrimaryEmailAddress": "JMPROTEK@MTAONLINE.NET",
      "borrowerPrimaryPhoneNumber": "9078926021",
      "borrowerPrimarySSN": "xxx-xx-6553",
      "borrowerSecondaryPhoneNumber": null,
      "borrowerSecondarySSN": "xxx-xx-7172",
      "coBorrower": "MICHELLE BARRON",
      "loanNumber": "0000015864",
      "propertyAddress1": "11765W BALLYSHANNON",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
    "0000016534": Object {
      "borrower": "MIGUEL RIOS",
      "borrowerPrimaryEmailAddress": null,
      "borrowerPrimaryPhoneNumber": "7132050366",
      "borrowerPrimarySSN": "xxx-xx-2458",
      "borrowerSecondaryPhoneNumber": "7136579592",
      "borrowerSecondarySSN": "",
      "coBorrower": null,
      "loanNumber": "0000016534",
      "propertyAddress1": "11111  CLARK RD",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
  },
  "ids": Array [
    "0000015864",
    "0000016534",
  ],
  "isLoading": false,
  "loaded": true,
  "loanDetail": null,
  "loanQuery": null,
  "selectedLoanId": null,
}
`;

exports[`LoansReducer SELECT should set the selected loan number on the state 1`] = `
Object {
  "entities": Object {
    "0000015864": Object {
      "borrower": "JEFFERY BARRON",
      "borrowerPrimaryEmailAddress": "JMPROTEK@MTAONLINE.NET",
      "borrowerPrimaryPhoneNumber": "9078926021",
      "borrowerPrimarySSN": "xxx-xx-6553",
      "borrowerSecondaryPhoneNumber": null,
      "borrowerSecondarySSN": "xxx-xx-7172",
      "coBorrower": "MICHELLE BARRON",
      "loanNumber": "0000015864",
      "propertyAddress1": "11765W BALLYSHANNON",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
    "0000016534": Object {
      "borrower": "MIGUEL RIOS",
      "borrowerPrimaryEmailAddress": null,
      "borrowerPrimaryPhoneNumber": "7132050366",
      "borrowerPrimarySSN": "xxx-xx-2458",
      "borrowerSecondaryPhoneNumber": "7136579592",
      "borrowerSecondarySSN": "",
      "coBorrower": null,
      "loanNumber": "0000016534",
      "propertyAddress1": "11111  CLARK RD",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
  },
  "ids": Array [
    "0000015864",
    "0000016534",
  ],
  "isLoading": false,
  "loaded": true,
  "loanDetail": null,
  "loanQuery": null,
  "selectedLoanId": "0000015864",
}
`;

exports[`LoansReducer Selectors selectId should return the selected id 1`] = `"0000015864"`;

exports[`LoansReducer query loans should set the loan query on the state 1`] = `
Object {
  "entities": Object {
    "0000015864": Object {
      "borrower": "JEFFERY BARRON",
      "borrowerPrimaryEmailAddress": "JMPROTEK@MTAONLINE.NET",
      "borrowerPrimaryPhoneNumber": "9078926021",
      "borrowerPrimarySSN": "xxx-xx-6553",
      "borrowerSecondaryPhoneNumber": null,
      "borrowerSecondarySSN": "xxx-xx-7172",
      "coBorrower": "MICHELLE BARRON",
      "loanNumber": "0000015864",
      "propertyAddress1": "11765W BALLYSHANNON",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
    "0000016534": Object {
      "borrower": "MIGUEL RIOS",
      "borrowerPrimaryEmailAddress": null,
      "borrowerPrimaryPhoneNumber": "7132050366",
      "borrowerPrimarySSN": "xxx-xx-2458",
      "borrowerSecondaryPhoneNumber": "7136579592",
      "borrowerSecondarySSN": "",
      "coBorrower": null,
      "loanNumber": "0000016534",
      "propertyAddress1": "11111  CLARK RD",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
  },
  "ids": Array [
    "0000015864",
    "0000016534",
  ],
  "isLoading": false,
  "loaded": true,
  "loanDetail": null,
  "loanQuery": null,
  "selectedLoanId": null,
}
`;
